# pystore

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CRITICAL_FIXES_IMPLEMENTATION.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE_4_FEATURES.md  PR77_IMPLEMENTATION_STATUS.md  PYSTORE_2025_COMPLETION_SUMMARY.md  PYSTORE_2025_MODERNIZATION_PLAN.md  README.md  README.rst  bug_analysis.md  meta.yaml  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_manual_multiindex.py  test_modernization.py
benchmarks/: benchmark_append.py  benchmark_base.py  benchmark_read.py  benchmark_write.py
examples/: pystore-tutorial.ipynb
logs/: pre_tool_use.json
pystore/: __init__.py  async_operations.py  collection.py  config.py  dataframe.py  exceptions.py  item.py  logger.py  memory.py  partition.py  pystore.py  schema_evolution.py  store.py  transactions.py  utils.py  validation.py
tests/: __init__.py  conftest.py  test_append.py  test_collection.py  test_edge_cases.py  test_exceptions.py  test_multiindex.py  test_performance.py  test_phase4_features.py  test_pr77_features.py  test_readme_examples.py  test_snapshots.py  test_store.py  test_write_read.py
